added button module, added modal module, added styles for category list

--- a/src/app/add-salary/add-salary.component.html
+++ b/src/app/add-salary/add-salary.component.html
@@ -1,17 +1,25 @@
-<div class="wrapper-form">
-  <div class="salary" >
-    <div class="name">Please, enter your budget</div>
-    <input type="text" [formControl]="priceControl"/>
-    <span *ngIf="priceControl.invalid && (priceControl.dirty ||priceControl.touched)">
-      <div *ngIf="priceControl?.errors?.['required']">
-        <span class="error">Please enter to date</span> 
-      </div>
-      <div *ngIf="priceControl?.errors?.['pattern']">
-        <span class="error">Please enter to number</span> 
-      </div>
+<app-modal-main>
+  <div class="name" slot="header">Add salary</div>
+  <div class="wrapper-form" slot="body">
+    <div class="salary">
+      <input type="text" [formControl]="priceControl" />
+      <span
+        *ngIf="
+          priceControl.invalid && (priceControl.dirty || priceControl.touched)
+        "
+      >
+        <div *ngIf="priceControl?.errors?.['required']">
+          <span class="error">Please enter to date</span>
+        </div>
+        <div *ngIf="priceControl?.errors?.['pattern']">
+          <span class="error">Please enter to number</span>
+        </div>
       </span>
-    <div class="button-class">
-      <button (click)="addSalaryValue()">Add to salary</button>
     </div>
   </div>
-</div>
+  <div slot="footer">
+    <app-btn-positive (click)="addSalaryValue()">
+      Add
+    </app-btn-positive>
+  </div>
+</app-modal-main>
