--- a/src/app/confirm-delete/confirm-delete.component.html
+++ b/src/app/confirm-delete/confirm-delete.component.html
@@ -1,5 +1,12 @@
-<p>Are you shore about this?</p>
-<div class="actions">
-  <button class="confirm" (click)="isConfirm()">Yes</button>
-  <button class="reset" (click)="ref.close()">No</button>
-</div>
+<app-modal-main>
+  <div class="name" slot="header">Are you shore about this?</div>
+  <div class="wrapper" slot="body">
+    If you delete expence, you will not be able to restore it!
+  </div>
+  <div class="actions" slot="footer">
+    <app-btn-negative class="m-r-auto" (click)="ref.close()">
+      No
+    </app-btn-negative>
+    <app-btn-positive (click)="isConfirm()"> Yes </app-btn-positive>
+  </div>
+</app-modal-main>
