--- a/src/app/modules/category/components/category-item/category-item.component.html
+++ b/src/app/modules/category/components/category-item/category-item.component.html
@@ -1,10 +1,15 @@
 <div class="wrapper-list">
-  <span class="icon"><i [class]="itemCategory.icon"></i></span>
-  <span class="name">{{ itemCategory.name }}</span>
-
-  <div class="action">
-    <button id="delete" (click)="removeItem()">
-      <img src="../assets/delete.png" alt="delete" />
-    </button>
+  <div class="item">
+    <div class="icon-wrapper">
+      <span class="icon"><i [class]="itemCategory.icon"></i></span>
+    </div>
+    <div class="title-wrapper">
+      <span class="name">{{ itemCategory.name }}</span>
+    </div>
+    <div class="action">
+      <app-btn-icon (click)="removeItem()">
+        <img src="../assets/delete.png" alt="" />
+      </app-btn-icon>
+    </div>
   </div>
 </div>
