--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
-@import '~remixicon/fonts/remixicon.css'
+@import '~remixicon/fonts/remixicon.css';
+
+@import './assets/styles/modal.scss';
+@import './assets/styles/helpers.scss';
