--- a/src/app/modules/category/components/category-list/category-list.component.scss
+++ b/src/app/modules/category/components/category-list/category-list.component.scss
@@ -1,9 +1,7 @@
-:host{
-  max-height: 200px;
-  overflow-y: scroll;
-}
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -13,14 +11,9 @@ ul {
   .item-title {
     display: flex;
     justify-content: space-between;
-    margin: 10px 0 20px;
-
-    .title-icon {
-      margin-left: 50px;
-    }
-    .title-name {
-      margin-right: 50px;
-    }
+    margin-bottom: 10px;
+    padding: 0 10px;
+    font-weight: 700;
   }
 
   .action {
