--- a/src/app/modules/category/components/category-item/category-item.component.html
+++ b/src/app/modules/category/components/category-item/category-item.component.html
@@ -7,8 +7,17 @@
       <span class="name">{{ itemCategory.name }}</span>
     </div>
     <div class="action">
+      <app-btn-icon (click)="editItem()">
+        <div class="tooltip">
+          <span class="tooltiptext">Edit</span>
+          <img slot="button" src="../assets/edit.png" />
+        </div>
+      </app-btn-icon>
       <app-btn-icon (click)="removeItem()">
-        <img src="../assets/delete.png" alt="" />
+        <div class="tooltip">
+          <span class="tooltiptext">Delete</span>
+          <img src="../assets/delete.png" alt="" />
+        </div>
       </app-btn-icon>
     </div>
   </div>
