--- a/src/app/modules/category/components/category-item/category-item.component.scss
+++ b/src/app/modules/category/components/category-item/category-item.component.scss
@@ -1,5 +1,4 @@
 .wrapper-list {
-
   .item {
     margin: 0 10px;
     display: flex;
@@ -7,7 +6,7 @@
     align-items: center;
     margin-bottom: 15px;
     padding: 5px 0;
-    background-color: #E6E6FA;
+    background-color: #e6e6fa;
     border-radius: 5px;
   }
   .icon {
@@ -40,5 +39,9 @@
     margin: 0 5px;
     width: 15px;
     height: 15px;
+  }
+
+  .tooltip .tooltiptext {
+    width: 70px;
   }
 }
