--- a/src/app/modules/category/components/category-list/category-list.component.scss
+++ b/src/app/modules/category/components/category-list/category-list.component.scss
@@ -14,6 +14,10 @@ ul {
     margin-bottom: 10px;
     padding: 0 10px;
     font-weight: 700;
+
+    .title-action{
+      margin-right: 20px;
+    }
   }
 
   .action {
