move components to components folder

--- a/src/app/modules/category/components/category-list/category-list.component.html
+++ b/src/app/modules/category/components/category-list/category-list.component.html
@@ -10,6 +10,7 @@
       <li *ngFor="let item of categoryService.categories; index as i">
         <app-category-item
           [itemCategory]="item"
+          (editClick)="categoryService.editCategory(item, i)"
           (removeClick)="categoryService.removeCategory(item)"
         ></app-category-item>
       </li>
