--- a/src/app/modules/category/components/category-icons/category-icons.component.html
+++ b/src/app/modules/category/components/category-icons/category-icons.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+<app-category-color [formControl]="colorControl">
+    
+</app-category-color>
     <div class="list-img">
         <i [class]="icon" *ngFor="let icon of icons" (click)="clickIcon(icon)"></i>
     </div>
