--- a/src/app/modules/category/components/category-view/category-view.component.html
+++ b/src/app/modules/category/components/category-view/category-view.component.html
@@ -1,3 +1,3 @@
 <div class="wrapper-list">
-  <span class="icon"><i [class]="category.icon"></i></span>
+  <span class="icon"><i [class]="category.icon" [ngStyle]="{color: category.color}"></i></span>
 </div>
