added pipe for date format

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
       <app-expence-list
         [list]="data"
         (remove)="handleRemove($event)"
-        (edit)="edit($event.item, $event.index)"
+        (edit)="edit($event)"
       ></app-expence-list>
     </div>
     <div class="actions">
