--- a/src/app/components/add-expence/add-expence.component.html
+++ b/src/app/components/add-expence/add-expence.component.html
@@ -46,7 +46,7 @@
           </span>
         </div>
         <div class="name">Date:</div>
-        <input type="date" />
+        <input type="date" formControlName="date" />
       </div>
     </div>
   </div>
