--- a/src/app/components/expence-list/expence-list.component.html
+++ b/src/app/components/expence-list/expence-list.component.html
@@ -1,5 +1,13 @@
-<ul>
-  <li *ngFor="let item of list; index as i" class="loggs">
-    <app-expence-item [item]="item" (removeClick)="removeFromList(i)" (editClick)="editItem($event, i)" class="item"></app-expence-item>
-  </li>
-</ul>
+<div class="group" *ngFor="let group of groupedList">
+  <span>{{group.date | dateFormat}}</span>
+  <ul>
+    <li *ngFor="let item of group.expences; index as i" class="loggs">
+      <app-expence-item
+        [item]="item"
+        (removeClick)="removeFromList($event)"
+        (editClick)="editItem(item)"
+        class="item"
+      ></app-expence-item>
+    </li>
+  </ul>
+</div>
