--- a/src/app/modules/category/components/category-view/category-view.component.html
+++ b/src/app/modules/category/components/category-view/category-view.component.html
@@ -1,3 +1,7 @@
-<div class="wrapper-list">
-  <span class="icon"><i [class]="category.icon" [ngStyle]="{color: category.color}"></i></span>
-</div>
+<app-tooltip text="{{ category.name }}">
+  <div class="wrapper-list">
+    <span class="icon"
+      ><i [class]="category.icon" [ngStyle]="{ color: category.color }"></i
+    ></span>
+  </div>
+</app-tooltip>
