--- a/src/app/modules/shared/components/tooltip/tooltip.component.scss
+++ b/src/app/modules/shared/components/tooltip/tooltip.component.scss
@@ -28,12 +28,13 @@
   .tooltiptext {
     position: absolute;
     z-index: 1;
-    min-width: 120px;
+    min-width: 100px;
+    height: auto;
     visibility: hidden;
     background-color: grey;
     color: white;
     text-align: center;
-    padding: 5px 0;
+    padding: 5px;
     border-radius: 6px;
     font-size: 14px;   
     bottom: calc(100% + 10px);
