--- a/src/app/components/add-expence/add-expence.component.html
+++ b/src/app/components/add-expence/add-expence.component.html
@@ -54,6 +54,9 @@
     <app-btn-negative class="m-r-auto" (click)="ref.close()">
       <span slot="button">Close</span>
     </app-btn-negative>
-    <app-btn-positive (click)="addExpence()"> Add </app-btn-positive>
+    <app-btn-positive (click)="addExpence()">
+      <span *ngIf="isEdit" slot="button">Edit</span>
+      <span *ngIf="!isEdit" slot="button">Add</span>
+    </app-btn-positive>
   </div>
 </app-modal-main>
