Added backgrounds icons

--- a/src/app/modules/category/components/category-item/category-item.component.scss
+++ b/src/app/modules/category/components/category-item/category-item.component.scss
@@ -6,12 +6,12 @@
     align-items: center;
     margin-bottom: 15px;
     padding: 5px 0;
-    background-color: #e6e6fa;
+    background-color: #FFFAFA;
     border-radius: 5px;
   }
   .icon {
     display: flex;
-    font-size: 22px;
+    font-size: 28px;
     text-align: center;
     margin-left: 10px;
   }
